# silverscore

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/silverscore/: __init__.py  base_modules.py  clip_modules.py  config.py  cross_modules.py  feature_extractor.py  i3d.py  model.py  scorer.py  tokenizer.py
tests/: test_components.py  test_config.py  test_e2e.py
