[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silverscore"
version = "0.1.0"
description = "SiLVERScore: Sign Language Video Embedding Retrieval Score — an evaluation metric for sign language generation based on CLIP-based embedding similarity."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Saki Imai" },
]
keywords = ["sign-language", "evaluation-metric", "clip", "video-text-retrieval", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.9",
    "numpy",
    "ftfy",
    "regex",
    "tqdm",
    "huggingface-hub",
    "opencv-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/sakimai/silverscore"
Repository = "https://github.com/sakimai/silverscore"

[tool.hatch.build.targets.wheel]
packages = ["src/silverscore"]

[tool.hatch.build.targets.wheel.force-include]
"src/silverscore/cross-base" = "silverscore/cross-base"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
